[SCN-61] Организовать storage и добавление картинки пользователя (#10)
* [SCN-61] Storage + image upload
Реализовано подключение в storage
Изменён хендлер эндпоинта регистрации для соответствия multipart/form-data
Реализована загрузка картинки
