# docs/swagger.json
@@ -9,6 +9,50 @@
     "host": "localhost:8080",
     "basePath": "/api/v1/",
     "paths": {
+        "/skills/all": {
+            "get": {
+                "description": "Get all skills",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Skills"
+                ],
+                "summary": "Skills",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.skillsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
         "/spheres/all": {
             "get": {
                 "description": "Get all spheres",
@@ -231,7 +275,7 @@
             "post": {
                 "description": "User sign-up",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -242,10 +286,23 @@
                 "summary": "User SignUp",
                 "parameters": [
                     {
-                        "description": "Sign-up info",
-                        "name": "input",
+                        "type": "file",
+                        "description": "Image [jpeg/png]",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Look at the userStringTemplate or entity.UserSignUpInput in Models",
+                        "name": "user",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "description": "User sign-up template",
+                        "name": "userStringTemplate",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/entity.UserSignUpInput"
                         }
@@ -291,49 +348,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User Auth"
-                ],
-                "summary": "User existence",
-                "parameters": [
-                    {
-                        "description": "User existence info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.UserExistenceInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/v1.userExistenceResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    },
-                    "404": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/v1.response"
-                        }
-                    }
-                }
-            }
-        },
-        "/spheres/all": {
-            "get": {
-                "description": "Get all spheres",
                 "produces": [
                     "application/json"
                 ],
@@ -426,6 +440,58 @@
                 }
             }
         },
+        "/user/profile": {
+            "get": {
+                "security": [
+                    {
+                        "UserAuth": []
+                    }
+                ],
+                "description": "user profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "User profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.userProfileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
         "/user/sign-out": {
             "get": {
                 "security": [
@@ -480,6 +546,32 @@
         }
     },
     "definitions": {
+        "entity.Job": {
+            "type": "object",
+            "properties": {
+                "companyName": {
+                    "type": "string"
+                },
+                "position": {
+                    "type": "string"
+                },
+                "responsibilities": {
+                    "type": "string"
+                },
+                "skills": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Skill"
+                    }
+                },
+                "workFrom": {
+                    "type": "string"
+                },
+                "workTo": {
+                    "type": "string"
+                }
+            }
+        },
         "entity.Skill": {
             "type": "object",
             "properties": {
@@ -524,6 +616,56 @@
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "entity.UserProfile": {
+            "type": "object",
+            "properties": {
+                "about": {
+                    "type": "string"
+                },
+                "age": {
+                    "type": "string"
+                },
+                "comment": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "experience": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "imageURL": {
+                    "type": "string"
+                },
+                "jobs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Job"
+                    }
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "maxSalary": {
+                    "type": "string"
+                },
+                "minSalary": {
+                    "type": "string"
+                },
+                "skillLevel": {
+                    "type": "string"
+                },
+                "skills": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Skill"
+                    }
                 }
             }
         },
@@ -611,6 +753,9 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "imageURL": {
+                    "type": "string"
                 }
             }
         },
@@ -652,6 +797,14 @@
             "properties": {
                 "Exists": {
                     "type": "boolean"
+                }
+            }
+        },
+        "v1.userProfileResponse": {
+            "type": "object",
+            "properties": {
+                "profile": {
+                    "$ref": "#/definitions/entity.UserProfile"
                 }
             }
         }
